[workspace]
resolver = "2"
members = ["anchor", "macro", "macro_core", "program"]
exclude = ["dependencies"]

[workspace.dependencies]
anyhow = "1.0.69"
borsh = "0.10.1"
hex = "0.3.1"
kani = { path = "./dependencies/kani/library/kani", features = [
    "concrete_playback",
] }
num-traits = "0.2"
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.108", features = ["full"] }
thiserror = "1.0.38"
