[package]
name = "otter-solana-program"
version = "0.2.6"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true }
hex = { workspace = true }
kani = { workspace = true, optional = true }
num-traits = { workspace = true }
otter-solana-macro = { path = "../macro" }
thiserror = { workspace = true }

[features]
kani = ["dep:kani"]
verify = ["otter-solana-macro/verify"]
